環境変数を設定した

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,6 +2,7 @@ version: 0.2
 
 env:
   variables:
+  CMS_CONTAINER_IMAGE: "cms-one"
     CMS_CONTAINER_IMAGE_REPO_NAME: "cms-one"
     CMS_CONTAINER_IMAGE_TAG: "version:1.0"
 phases:
@@ -22,4 +23,5 @@ phases:
     commands:
       - echo todo is nothing...
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$CMS_CONTAINER_IMAGE_REPO_NAME:$CMS_CONTAINER_IMAGE_TAG
+
 
