--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,11 +5,12 @@ env:
     CMS_CONTAINER_IMAGE: "cms-one"
     CMS_CONTAINER_IMAGE_REPO_NAME: "cms-one"
     CMS_CONTAINER_IMAGE_TAG: "version:1.0"
+    AWS_ACCOUNT_ID: "154193615937"
 phases:
   install:
     commands:
       - echo install is nothing...
-      - AWS_ACCOUNT_ID=$(aws sts get-caller-identity --query 'Account' --output text)
+      # - AWS_ACCOUNT_ID=$(aws sts get-caller-identity --query 'Account' --output text)
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
