--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,11 +9,13 @@ phases:
   install:
     commands:
       - echo install is nothing...
-      # - AWS_ACCOUNT_ID=$(aws sts get-caller-identity --query 'Account' --output text)
+      - AWS_ACCOUNT_ID=$(aws sts get-caller-identity --query 'Account' --output text)
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
+      - echo ${DOCKER_HUB_PASSWORD} | docker login -u ${DOCKER_HUB_ID} --password-stdin
+
   build:
     commands:
       - echo build docker image
