tagの名称を修正した

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ env:
   variables:
     CMS_CONTAINER_IMAGE: "cms-one"
     CMS_CONTAINER_IMAGE_REPO_NAME: "cms-one"
-    CMS_CONTAINER_IMAGE_TAG: "version:1.0"
+    CMS_CONTAINER_IMAGE_TAG: "version1.0"
 phases:
   install:
     commands:
